--- a/Makefile.inc
+++ b/Makefile.inc
@@ -5,6 +5,6 @@ MAKE      = make
 
 COPT      = -O3
 CWARN     = 
-CFLAGS    = -MD -MP -std=c11 -Wall -Wextra $(CWARN) $(COPT) $(CINC) -Wno-unused-function
+CFLAGS    = -MD -MP -Wall -Wextra $(CWARN) $(COPT) $(CINC) -Wno-unused-function
 LDFLAGS   = -lrpc -lmem -lutil -L$(CODE_DIR)/libs
 MAKEFLAGS = --no-print-directory --section-alignment 0x1000 -I$(PWD)
