test: update simple rpc test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,6 +6,7 @@ all: clean rpc_tests
 
 rpc_tests:
 	@$(CC) rpc_test_client.c $(CFLAGS) -o rpc_test_client.test $(LDFLAGS)
+	@$(CC) rpc_test_server.c $(CFLAGS) -o rpc_test_server.test $(LDFLAGS)
 
 clean:
 	rm -rf *.o *.d *.test
