test: init flush period test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
 include ../Makefile.inc
 
-.PHONY: clean rpc_tests cache_micro
+.PHONY: clean rpc_tests cache_micro flush_period
 
-all: clean rpc_tests cache_micro
+all: clean rpc_tests cache_micro flush_period
 
 rpc_tests:
 	@$(CC) rpc_test_client.c $(CFLAGS) -o rpc_test_client.test $(LDFLAGS)
@@ -10,6 +10,9 @@ rpc_tests:
 
 cache_micro:
 	@$(CC) cache_micro.c $(CFLAGS) -o cache_micro.test $(LDFLAGS)
+
+flush_period:
+	@$(CC) flush_period.c $(CFLAGS) -o flush_period.test $(LDFLAGS)
 
 clean:
 	rm -rf *.o *.d *.test
