lib: urcu init port

--- a/libs/Makefile
+++ b/libs/Makefile
@@ -9,10 +9,12 @@ all:
 	make $(MAKEFLAGS) -C mem
 	make $(MAKEFLAGS) -C bi
 	make $(MAKEFLAGS) -C util
+	make $(MAKEFLAGS) -C rcu
 
 clean:
 	make $(MAKEFLAGS) -C rpc clean
 	make $(MAKEFLAGS) -C mem clean
 	make $(MAKEFLAGS) -C bi clean
 	make $(MAKEFLAGS) -C util clean
+	make $(MAKEFLAGS) -C rcu clean
 	rm -rf *.a
