test: add uruc atomic obj

--- a/atomic_obj/Makefile
+++ b/atomic_obj/Makefile
@@ -3,9 +3,9 @@ include Makefile.inc
 CFILES  = $(wildcard *.c)
 COBJS   = $(patsubst %.c,%.o,$(CFILES))
 
-.PHONY: clean all bi lock
+.PHONY: clean all bi lock urcu
 
-all: bi lock
+all: bi lock urcu
 
 bi: $(CFILES)
 	@rm -rf *.o
@@ -14,6 +14,10 @@ bi: $(CFILES)
 lock: $(CFILES)
 	@rm -rf *.o
 	@$(CC) $^ $(CFLAGS) -DATOMIC_OBJ_LOCK -o aobj_lock.test $(LDFLAGS)
+
+urcu: $(CFILES)
+	@rm -rf *.o
+	@$(CC) $^ $(CFLAGS) -DATOMIC_OBJ_RCU -o aobj_rcu.test $(LDFLAGS) -lurcu -lbircu
 
 clean:
 	@rm -f *.o *.d *.test *~
